Fixed missing background

--- a/frontend/src/style.css
+++ b/frontend/src/style.css
@@ -10,8 +10,15 @@
     }
 }
 
+body {
+    /* @apply bg-blue-700 */
+    background-color: white;
+    height: 100%
+}
 
-html {
+html{
+    @apply bg-blue-700;
+    height: 100%;
     /* min-height: calc(100% + env(safe-area-inset-top));*/
     padding-top: env(safe-area-inset-top);
     padding-right: env(safe-area-inset-right) ;
